# nyc-tlc-platform

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/agents/: security-reviewer.agent.md
.github/workflows/: agent-task.yml  ci.yml  security-validate.yml
data_quality/: run_expectations.py
data_quality/expectations/: nyc_tlc_gold_suite.json
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/macros/: replace_where.sql
dbt_project/models/marts/: dim_datetime.sql  dim_location.sql  fact_trips.sql  mart_hourly_kpi.sql  schema.yml
infra/: Dockerfile.airflow  Dockerfile.superset  Dockerfile.superset-init  docker-compose.yml  requirements-airflow.txt  superset_config.py
infra/terraform/: athena.tf  emr_serverless.tf  glue.tf  networking.tf  outputs.tf  tfplan  variables.tf
ingestion/bootstrap/: backfill_2022_2026.py  tempCodeRunnerFile.py
ingestion/dags/: nyc_tlc_pipeline.py
ingestion/operators/: emr_serverless_operator.py
ingestion/src/: downloader.py  schema_validator.py  tlc_catalog.py
serving/rag_app/: Dockerfile  eval_harness.py  main.py  rag_chain.py  requirements.txt  streamlit_app.py  supervisord.conf
serving/superset/: build_charts.py  dashboard_export.json
spark_jobs/: job1_cleanse.py  job2_enrich_join.py  job3_aggregations.py
tests/: conftest.py  pytest.ini
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_job1_cleanse.py  test_transformations.py
utils/: repair_silver_glue.py
(+5 files in other folders)
