[project]
name = "nyctax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=3.2.1",
    "boto3>=1.43.9",
    "dbt-athena-community>=1.10.1",
    "dbt-core>=1.11.10",
    "fastapi>=0.136.1",
    "great-expectations>=1.17.2",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "mlflow>=3.12.0",
    "openai>=2.37.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "black>=25.1.0",
    "pip-audit>=2.9.0",
    "pre-commit>=4.1.0",
    "ruff>=0.15.13",
]
